<resources>
    <string name="app_name">UnitConverter</string>
    <string name="InputPrompt">Enter Unit</string>
    <string name="MetresConvert">Metres</string>
    <string name="output3" />
    <string name="output2" />
    <string name="output1" />
    <string name="kilograms_convert">Kilograms</string>
    <string name="temperature_convert">Temp</string>
    <string-array name="units">
        <item>Metres</item>
        <item>Celsius</item>
        <item>Kilogram</item>
    </string-array>
</resources>